--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,5 @@
+$dg: #202225;
+
 * {
     margin: 0;
     padding: 0;
@@ -9,20 +11,34 @@ body {
     height: 100vh;
     width: 100vw;
     font-family: Arial, Helvetica, sans-serif;
+    background: #36393F;
+    color: #fff;
 }
 
 .chatroom {
-    display: flex;
+    display: grid;
+    grid-template-columns: 100px auto;
+    grid-template-rows: auto;
     height: 100vh;
+    width: 100vw;
 }
 
 nav { 
-    background: gray;
-    height: 100%;
-    position: relative;
-    width: 100px;
+    background: $dg;
     padding: 30px 15px;
     z-index: 1;
+    &::-webkit-scrollbar {
+        background: $dg !important;
+        width: 8px
+    }
+    &::-webkit-scrollbar-thumb {
+        background: black!important;
+        border-radius: 1rem;
+    }
+    &::-webkit-scrollbar-thumb:hover {
+        background-color: black !important;
+    }
+
 }
 
 nav hr {
@@ -40,6 +56,8 @@ nav .add {
     font-weight: bold;
     font-size: 2rem;
     color: grey;
+    position: absolute;
+    bottom: 30px;
 }
 
 .add-chatroom {
@@ -78,7 +96,16 @@ nav .add {
     min-width: 100px;
     background-color: grey;
     height: 100%;
-    
+}
+
+.list-container {
+    height: 70%;
+    overflow-y: auto;
+    overflow-x: hidden;
+    &::-webkit-scrollbar {
+        display: none;
+        width: 2px;
+    }
 }
 
 .user-avatar:hover .user-info {
@@ -113,18 +140,104 @@ nav .add {
     display: flex;
 }
 
+.message-control img {
+    border-radius: 100%;
+    height: auto;
+    width: 80px;
+}
+
+.message-control:not(:last-child) {
+    margin-bottom: 1rem;
+}
+
 .chat-section {
-    height: 100vh;
-    overflow: hidden;
-    position: relative;
+    display: grid;
+    grid-template: 'a a b'
+                   'c c b'
+                   'd d b';
+    grid-template-columns: auto auto 200px;
+    grid-template-rows: 100px calc(100vh - 200px) 100px;
 }
 
 .chat-section form {
-    position: absolute;
-    bottom: 0%;
+    grid-area: d;
 }
 
 .chat-box {
-    overflow-y: scroll;
-    height: 500px;
+    overflow: auto;
+    grid-area: c;
+}
+
+.member-list {
+    background-color: #2F3136;
+    grid-area: b;
+    padding: 1rem;
+    overflow-y: auto;
+}
+
+.member-list h2 {
+    margin-bottom: 1rem;
+}
+
+.member-list div {
+    overflow-y: auto;
+}
+
+.member-box {
+    display: flex;
+    align-items: center;
+}
+
+.member-box img {
+    height: auto;
+    width: 60px;
+    border-radius: 100%;
+}
+
+.member-box:not(:last-child) {
+    margin-bottom: 1rem;
+}
+
+.member-box div {
+    display: flex;
+    align-items: center;
+}
+
+.chat-roomname {
+    grid-area: a;
+    display: flex;
+    align-items: center;
+}
+
+.chat-roomname h1 {
+    margin-left: 140px;
+}
+
+//scrollbar
+.member-list {
+    &::-webkit-scrollbar {
+        background: grey !important;
+        width: 8px;
+    }
+    &::-webkit-scrollbar-thumb {
+        background: white !important;
+        border-radius: 1rem;
+    }
+    &::-webkit-scrollbar-thumb:hover {
+        background-color: black !important;
+    }
+}
+
+.chat-box {
+    &::-webkit-scrollbar {
+        background: #36393F !important;
+        width: 8px
+    }
+    &::-webkit-scrollbar-thumb {
+        background: $dg !important;
+        border-radius: 1rem;
+    }
+    &::-webkit-scrollbar-thumb:hover {
+        background-color: black !important;
+    }
 }
