--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,12 +13,17 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     background: #36393F;
     color: #fff;
+    overflow-y: hidden;
+}
+
+html, body {
+    overflow-y: hidden;
+    position: relative;
 }
 
 .chatroom {
     display: grid;
     grid-template-columns: 100px auto;
-    grid-template-rows: auto;
     height: 100vh;
     width: 100vw;
 }
@@ -151,6 +156,7 @@ nav .add {
 }
 
 .chat-section {
+    height: 100vh;
     display: grid;
     grid-template: 'a a b'
                    'c c b'
@@ -161,10 +167,21 @@ nav .add {
 
 .chat-section form {
     grid-area: d;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.chat-section form div {
+    width: 400px;
+    display: grid;
+    grid-template-columns: auto 100px;
+    height: 40px;
 }
 
 .chat-box {
-    overflow: auto;
+    overflow-y: auto;
+    overflow-x: hidden;
     grid-area: c;
 }
 
@@ -207,10 +224,7 @@ nav .add {
     grid-area: a;
     display: flex;
     align-items: center;
-}
-
-.chat-roomname h1 {
-    margin-left: 140px;
+    padding: 0 4rem;
 }
 
 //scrollbar
