--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,12 +13,54 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     background: #36393F;
     color: #fff;
-    overflow-y: hidden;
+    overflow: hidden;
 }
 
 html, body {
     overflow-y: hidden;
     position: relative;
+}
+
+//landing
+.home {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.login-container {
+    background: $dg;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2rem;
+    border-radius: 0.5rem;
+}
+
+.login-container h1 {
+    margin-bottom: 1rem;
+}
+
+.login-button {
+    cursor: pointer;
+}
+
+.no-room {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.no-room div {
+    text-align: center;
+    h1 {
+        font-size: 3rem;
+    }
+    p {
+        font-size: 1.4rem;
+    }
 }
 
 .chatroom {
@@ -30,8 +72,10 @@ html, body {
 
 nav { 
     background: $dg;
-    padding: 30px 15px;
-    z-index: 1;
+    padding: 30px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     &::-webkit-scrollbar {
         background: $dg !important;
         width: 8px
@@ -49,6 +93,7 @@ nav {
 nav hr {
     border: none;
     height: 1px;
+    width: 70%;
     border-bottom: 2px solid white;
     margin-bottom: 17.5px;
 }
@@ -78,10 +123,42 @@ nav .add {
 }
 
 .add-inside {
-    background: grey;
+    background: #2F3136;
     width: 500px;
     margin-bottom: 8rem;
     padding: 2rem;
+    border-radius: 10px;
+}
+
+.add-inside h1 {
+    text-align: center;
+    margin-bottom: 1rem;
+}
+
+.add-container {
+    overflow-y: auto;
+    height: 100px;
+    &::-webkit-scrollbar {
+        background: #36393F !important;
+        width: 8px;
+        border-radius: 1rem;
+    }
+    &::-webkit-scrollbar-thumb {
+        background: $dg !important;
+        border-radius: 1rem;
+    }
+    &::-webkit-scrollbar-thumb:hover {
+        background-color: black !important;
+    }
+}
+
+.add-container > *:not(:last-child) {
+    margin-bottom: 1rem;
+}
+
+.self {
+    background: $dg;
+    border-radius: 3rem;
 }
 
 .user-avatar {
@@ -104,12 +181,11 @@ nav .add {
 }
 
 .list-container {
-    height: 70%;
+    height: calc(100vh - 260px);
     overflow-y: auto;
-    overflow-x: hidden;
+    overflow-x: visible;
     &::-webkit-scrollbar {
         display: none;
-        width: 2px;
     }
 }
 
@@ -118,6 +194,22 @@ nav .add {
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
+    background: $dg;
+    width: 200px;
+    border-top-right-radius: 1rem;
+    border-bottom-right-radius: 1rem;
+}
+
+.user-info button {
+    background: #36393F;
+    color: white;
+    padding: 0.2rem 1rem;
+    border: none;
+    border-radius: 1rem;
+    &:hover {
+        background: #2F3136;
+
+    }
 }
 
 .add-name {
@@ -133,22 +225,48 @@ nav .add {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-bottom: 17px;
     cursor: pointer;
     transition: 0.5s ease-out;
+
+    position: relative;
     &:hover {
         border-radius: 40%;
     }
 }
 
+.current {
+    width: 70px;
+    height: 70px;
+    background: #2F3136;
+    border-radius: 0.5rem;
+}
+
+
+.spacing:not(:last-child) {
+    margin-bottom: 1rem;
+}
+
 .message-control {
     display: flex;
+    padding: 0.5rem
+}
+
+.message-col {
+    padding: 0.5rem;
+}
+
+.message-col > p:first-of-type {
+    font-weight: bold;
+    font-size: 1.2rem;
+    margin-bottom: 0.2rem;
+    color:white;
 }
 
 .message-control img {
     border-radius: 100%;
     height: auto;
     width: 80px;
+    margin-right: 1rem;
 }
 
 .message-control:not(:last-child) {
@@ -170,19 +288,48 @@ nav .add {
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 0 2rem;
+ 
 }
 
 .chat-section form div {
-    width: 400px;
+    width: 100% ;
     display: grid;
     grid-template-columns: auto 100px;
     height: 40px;
+    
+}
+
+.chat-section form div input {
+    background: #40444B;
+    border: none;
+    border-bottom-left-radius: 80px;
+    border-top-left-radius: 80px;
+    color: #fff;
+    padding: 0 1rem;
+    &:focus {
+        outline: none;
+    }
+}
+
+.chat-section form div button {
+    background: #2F3136;
+    border: none;
+    color: white;
+    font-weight: bold;
+    border-top-right-radius: 80px;
+    border-bottom-right-radius: 80px;
+    transition: 0.5s;
+    &:hover {
+        background: $dg;
+    }
 }
 
 .chat-box {
     overflow-y: auto;
     overflow-x: hidden;
     grid-area: c;
+    padding: 0 2rem;
 }
 
 .member-list {
@@ -209,6 +356,7 @@ nav .add {
     height: auto;
     width: 60px;
     border-radius: 100%;
+    margin-right: 0.5rem;
 }
 
 .member-box:not(:last-child) {
@@ -225,6 +373,8 @@ nav .add {
     display: flex;
     align-items: center;
     padding: 0 4rem;
+    background: #2F3136;
+    border-bottom: 3px solid $dg;
 }
 
 //scrollbar
